# CesaConn

./: .gitignore  Cargo.toml  LICENSE  README.md
cesa_conn_crypto/: Cargo.toml
cesa_conn_crypto/src/: aes.rs  auth.rs  ecc.rs  ecdh.rs  lib.rs  pswd_manager.rs  salt.rs
cesa_conn_ipc/: Cargo.toml
cesa_conn_ipc/src/: lib.rs
cesa_conn_networker/: Cargo.toml
cesa_conn_networker/src/: auth.rs  cesa_conn_networker.rs  ipc.rs  tcp_networker.rs  udp_networker.rs
cesa_conn_system/: Cargo.toml
cesa_conn_system/src/: controller.rs
cesa_conn_tui/: Cargo.toml
cesa_conn_tui/src/: ipc_client.rs  lib.rs  main.rs
